appsets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-helloword
  annotations:
    cert-manager.io/cluster-issuer: "testissuer"
  namespace: helloword
spec:
  rules:
    - host: test.dokra.io
      http:
        paths:
          - backend:
              service:
                port:
                  number: 8080
                name: helloworld-http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - test.dokra.io
      secretName: helloworld-http-tls
  ingressClassName: nginx
